fix overflowing margin/padding in campgroundPage for mobile

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -662,10 +662,6 @@ div > .figure > a > .img-thumbnail {
     padding-top: 60px;
   }
 
-  body, html {
-    overflow-x: hidden;
-  }
-
   .row > .col-md-9 > .mb-3 {
     margin-bottom: 0 !important;
     border: 0 !important;
@@ -673,6 +669,14 @@ div > .figure > a > .img-thumbnail {
 
   .root-outer > .app-outer > div > .mb-5 {
     margin-bottom: 0 !important;
+  }
+
+  .app-outer > div > .container > div > .row {
+    margin: 0;
+  }
+
+  .app-outer > div > .container > div > .row > div {
+    padding: 0;
   }
 }
 
